--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<li>Hobby : karate</li>
 	</ul>
 	<p>These are the pictures of my hobbies.</p>
-	<img src="img/irsyad.jpg">  
+	<img src="img/irsyad.jpg" height="500" width="400">  
 	<img src="img/irsyad2.jpg">
 	</div>
 </body>
